footer links fixed

--- a/includes/footer.html
+++ b/includes/footer.html
@@ -72,12 +72,12 @@
                     <div class="widget style2 widget-out-link clearfix">
                         <h3 class="widget-title">Our Industries</h3>
                         <ul id="menu-footer-services">
-                            <li><a href="distributors.html">Oil &amp; Gas</a></li>
-                            <li><a href="distributors.html">Manufacturing</a></li>
-                            <li><a href="distributors.html">Aerospace</a></li>
-                            <li><a href="distributors.html">Auto Motive</a></li>
-                            <li><a href="distributors.html">Agricultural</a></li>
-                            <li><a href="distributors.html">Mechanical</a></li>
+                            <li><a href="../distributors.html">Oil &amp; Gas</a></li>
+                            <li><a href="../distributors.html">Manufacturing</a></li>
+                            <li><a href="../distributors.html">Aerospace</a></li>
+                            <li><a href="../distributors.html">Auto Motive</a></li>
+                            <li><a href="../distributors.html">Agricultural</a></li>
+                            <li><a href="../distributors.html">Mechanical</a></li>
                         </ul>
                     </div>
                     <div class="widget style2 widget-out-link clearfix">
@@ -137,7 +137,7 @@
                 </div>
                 <div class="col-md-6 ttm-footer2-right">
                     <ul id="menu-footer-menu" class="footer-nav-menu">
-                        <li><a href="contact.html">Contact Us</a></li>
+                        <li><a href="../contact.html">Contact Us</a></li>
                     </ul>
                 </div>
             </div>
