--- a/includes/header.html
+++ b/includes/header.html
@@ -5,7 +5,7 @@
         <div class="container">
             <div class="ttm-topbar-content">
                 <ul class="top-contact text-left">
-                    <li class="list-inline-item">Manufacturing Cutting Tools for Over 75 Years!</li>
+                    <li class="list-inline-item">Manufacturing Cutting Tools for Over 75 Years! <a href="../products/surplus_jan-2022.txt">SURPLUS INVENTORY</a></li>
                 </ul>
                 <div class="topbar-right text-right">
                     <!-- <div class="ttm-social-links-wrapper list-inline">
