--- a/includes/header.html
+++ b/includes/header.html
@@ -5,7 +5,8 @@
         <div class="container">
             <div class="ttm-topbar-content">
                 <ul class="top-contact text-left">
-                    <li class="list-inline-item">Manufacturing Cutting Tools for Over 75 Years! <a href="../products/surplus_jan-2022.txt">SURPLUS INVENTORY</a></li>
+                    <li class="list-inline-item">Manufacturing Cutting Tools for Over 75 Years! | 
+                        <a href="../products/surplus_jan-2022.pdf" style="color:cornflowerblue;font-weight:bold;text-decoration: underline;" target="_BLANK">SURPLUS INVENTORY AVAILABLE! CLICK HERE TO VIEW!</a></li>
                 </ul>
                 <div class="topbar-right text-right">
                     <!-- <div class="ttm-social-links-wrapper list-inline">
